[gd_scene load_steps=5 format=3 uid="uid://dbbfwqe04glnk"]

[ext_resource type="Script" path="res://scenes/server.gd" id="1_nwq0y"]
[ext_resource type="PackedScene" uid="uid://bmyetss0yrpp5" path="res://scenes/spawners/map_spawner.tscn" id="2_cv5qq"]
[ext_resource type="PackedScene" uid="uid://btlnnfbdmap5w" path="res://scenes/spawners/character_spawner.tscn" id="3_8utyv"]
[ext_resource type="PackedScene" uid="uid://cmc8wrkuejr2u" path="res://scenes/network_messenger.tscn" id="4_570yk"]

[node name="NetworkRoot" type="Node"]
script = ExtResource("1_nwq0y")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Server"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Spawns")

[node name="Spawns" type="Node" parent="."]

[node name="MapSpawner" parent="." instance=ExtResource("2_cv5qq")]

[node name="CharacterSpawner" parent="." instance=ExtResource("3_8utyv")]

[node name="NetworkMessenger" parent="." instance=ExtResource("4_570yk")]
